--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,11 @@
     <string name="restore">Restore</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="add_ingredient">Add ingredient</string>
+    <string name="settings">Settings</string>
+    <string name="bug_report">Bug report</string>
+    <string name="email">Email</string>
+    <string name="search">Search...</string>
+    <string name="pick_a_recipe">Pick a recipe</string>
 
 </resources>
