--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,7 @@
     <string name="see_more">See more...</string>
     <string name="find">Find</string>
     <string name="map_not_ready">Map not ready</string>
+    <string name="ban_ingredient">Ban ingredient</string>
+    <string name="pick_recipe_instruction">Click on \"+\" to add ingredients you have. Click on \"+\" to ban undesirable ingredients.</string>
 
 </resources>
